--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app_body{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar{
+  flex: 0.2;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.main{
+flex: 0.8;
+border: 1px solid black;
+}
+@media only screen and (max-width: 593px) {
+  .app_body{
+      display: flex;
+      justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
